user update profile first round

--- a/config/locales/fr.json
+++ b/config/locales/fr.json
@@ -1,11 +1,15 @@
 {
   "Administrator": "Administrateur",
   "Delete": "Effacer",
+  "does not exist." : "n'existe pas.",
   "Edit": "Editer",
   "Email" : "Email",
   "email address": "adresse email",
+  "Edit your profile": "Editez votre profil",
   "firstname": "prénom",
   "Firstname": "Prénom",
+  "has logged in.": "s'est connecté.",
+  "has logged out.": "s'est déconnecté",
   "Incorrect email and password." : "Adresse email et mot de passe incorrect.",
    "Insufficient rights to access this page.": "Droits insuffisants pour accéder a cette page.",
   "lastname": "nom",
@@ -13,11 +17,16 @@
   "New account": "Nouveau compte",
   "password": "mot de passe",
   "password confirmation": "verification du mot de passe",
+  "Please enter a valid email address and password." : "Veuillez entrer une adresse email et un mot de passe.",
   "Proceed": "Valider",
+  "Save and continue": "Enregistrer et continuer",
   "Show": "Profil",
   "Sign up": "Créer un compte",
   "Sign in": "Connexion",
   "Sign out": "Déconnexion",
+  "signed-up and logged in." : "vient de créer son compte et se connecter.",
+  "The email address": "L'adresse email",
+  "The user does not exist.": "L'utilisateur n'éxiste pas.",
   "Update a user": "Mise a jour d'un utilisateur",
   "User": "Utilisateur",
   "Users": "Utilisateurs",
