new and edit user forms, including validation

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "footer": "Perp by ",
+  "footer": "Perp 163x by ",
   "static_index_title" : "PERP 163x",
   "static_index_content" : "Start planning your retirement today with PERP 163x"
 }
