--- a/config/locales/fr.json
+++ b/config/locales/fr.json
@@ -1,41 +1,110 @@
 {
+  "above": "plus de",
+  "Administration": "Administration",
   "Administrator": "Administrateur",
+  "Agricultor": "Agriculteur exploitant",
+  "Agricultural": "Agricole",
+  "Arbitrage options": "Options d'arbitrage",
+  "Artisan, commerce and CEOs": "Artisan, commerçant et chef d'entreprise",
+  "Address": "Adresse",
+  "Basic info": "Information générale",
+  "Beneficiaries / fund transfers": "Bénéficiaires / versements",
+  "below": "inférieure à",
+  "Birth place": "Lieu de naissance",
+  "Completion": "Progression",
+  "City": "Ville",
+  "Country": "Pays",
+  "Date of birth": "Date de naissance",
+  "Default language": "Langue par défaut",
   "Delete": "Effacer",
+  "Department of birth place": "Département du lieu de naissance",
+  "Divorced": "Divorcé(e)",
   "does not exist." : "n'existe pas.",
   "Edit": "Editer",
-  "Email" : "Email",
-  "email address": "adresse email",
+  "Edit profile": "Edition du profile",
   "Edit your profile": "Editez votre profil",
+  "Email": "Email",
+  "email": "email",
+  "email address": "adresse email",
+  "Exact Job title (latest if retired)": "Profession précise (dernière si retraité)",
+  "Executive, teacher, liberal, scientific or artistic profession": "Cadre, professeur, profession libérale, scientifique ou artistique",
+  "Expected retirement age (if blank, 67yo will be saved by default)": "Âge prévisionnel de départ a la retraite (ans), à défaut de réponse, l'âge retenu sera de 67 ans",
+  "Expiration date": "Expiration le",
+  "Family assets range": "Tranche de patrimoine du foyer",
+  "Family yearly gross income range": "Tranche de revenus bruts annuels du foyer",
   "firstname": "prénom",
   "Firstname": "Prénom",
+  "from": "de",
+  "From": "De",
   "has logged in.": "s'est connecté.",
   "has logged out.": "s'est déconnecté",
+  "Home phone": "Tél. domicile",
+  "ID card": "Pièce d'identité",
   "Incorrect email and password." : "Adresse email et mot de passe incorrect.",
-   "Insufficient rights to access this page.": "Droits insuffisants pour accéder a cette page.",
+  "Insufficient rights to access this page.": "Droits insuffisants pour accéder a cette page.",
+  "Intermediary profession": "Profession intermédiaire",
+  "Issuance authority": "Nom de l'autorité qui l'a délivré",
+  "Issuance city": "Délivré à",
+  "Issuance date": "Délivré le",
+  "Issuance country": "Pays",
+  "Language": "Langue",
   "lastname": "nom",
   "Lastname": "Nom",
+  "Living together": "Concubin",
+  "Maiden name":"Nom de jeune fille",
+  "Marital status": "Statut",
+  "Married": "Marié(e)",
+  "Matrimonial regime": "Régime matrimonial",
+  "Miss": "Mlle",
+  "Mobile phone": "Tél. portable",
+  "Mr.": "M.",
+  "Ms.": "Mme",
+  "Nationality": "Nationalité",
   "New account": "Nouveau compte",
+  "Number": "Numéro",
+  "Occupation": "Profession",
+  "Occupation (latest if retired)": "Profession précise (dernière si retraité)",
+  "Partner bound by a solidarity civil pact (PACS)": "Partenaire lié par un Pacte Civil de Solidarité",
+  "Passport": "Passeport",
   "password": "mot de passe",
-  "password confirmation": "verification du mot de passe",
+  "Password": "Mot de passe",
+  "Password confirmation": "Confirmation du mot de passe",
+  "Payment details": "Modalités de règlement",
+  "Personal info": "Information personelle",
   "Please enter a valid email address and password." : "Veuillez entrer une adresse email et un mot de passe.",
+  "Portfolio management":"Gestion financière",
+  "Postal code": "Code postal",
   "Proceed": "Valider",
+  "profile": "le profil",
+  "Profile": "Profil",
+  "Retired": "Retraité",
+  "Salary man": "Employé",
   "Save and continue": "Enregistrer et continuer",
-  "Show": "Profil",
+  "Show": "Afficher",
   "Sign up": "Créer un compte",
   "Sign in": "Connexion",
   "Sign out": "Déconnexion",
   "signed-up and logged in." : "vient de créer son compte et se connecter.",
+  "Single": "Célibataire",
+  "Social regime": "Régime social",
+  "Street number": "Adresse numéro",
+  "to":"à",
   "The email address": "L'adresse email",
   "The user does not exist.": "L'utilisateur n'éxiste pas.",
+  "Title":"Civilité",
+  "Type": "Nature",
+  "Type of industry": "Secteur d'activité",
   "Update a user": "Mise a jour d'un utilisateur",
   "User": "Utilisateur",
   "Users": "Utilisateurs",
-  "User Administration": "Administration",
+  "Widowed": "Veuf(ve)",
+  "Without any professional activity": "Sans activité professionnelle",
+  "Worker": "Ouvrier",
 
   "Blog": "Blog",
   "Contact us": "Contactez nous",
   "FAQ": "FAQ",
-  "footer": "Perp par ",
+  "footer": "Perp 163x par ",
   "PERP in details" : "PERP en details",
   "static_index_title" : "PERP 163x",
   "static_index_content" : "Préparez votre retraite dès maintenant avec le PERP 163x"
