user bank account - not 100% working

--- a/config/locales/fr.json
+++ b/config/locales/fr.json
@@ -1,5 +1,7 @@
 {
   "above": "plus de",
+  "Account": "Compte",
+  "Add an account": "Ajouter un compte",
   "Administration": "Administration",
   "Administrator": "Administrateur",
   "Agricultor": "Agriculteur exploitant",
@@ -7,10 +9,13 @@
   "Arbitrage options": "Options d'arbitrage",
   "Artisan, commerce and CEOs": "Artisan, commerçant et chef d'entreprise",
   "Address": "Adresse",
+  "Bank address": "Adresse de la banque",
+  "Bank name": "Nom de la banque",
   "Basic info": "Information générale",
   "Beneficiaries / fund transfers": "Bénéficiaires / versements",
   "below": "inférieure à",
   "Birth place": "Lieu de naissance",
+  "Branch name": "Nom de l'agence",
   "Completion": "Progression",
   "City": "Ville",
   "Country": "Pays",
@@ -29,6 +34,7 @@
   "Exact Job title (latest if retired)": "Profession précise (dernière si retraité)",
   "Executive, teacher, liberal, scientific or artistic profession": "Cadre, professeur, profession libérale, scientifique ou artistique",
   "Expected retirement age (if blank, 67yo will be saved by default)": "Âge prévisionnel de départ a la retraite (ans), à défaut de réponse, l'âge retenu sera de 67 ans",
+  "Expected retirement age (years)": "Âge prévisionnel de départ a la retraite (ans)",
   "Expiration date": "Expiration le",
   "Family assets range": "Tranche de patrimoine du foyer",
   "Family yearly gross income range": "Tranche de revenus bruts annuels du foyer",
@@ -55,6 +61,7 @@
   "Marital status": "Statut",
   "Married": "Marié(e)",
   "Matrimonial regime": "Régime matrimonial",
+  "Max number of accounts reached": "Nombre maximum de comptes atteint",
   "Miss": "Mlle",
   "Mobile phone": "Tél. portable",
   "Mr.": "M.",
@@ -70,6 +77,7 @@
   "Password": "Mot de passe",
   "Password confirmation": "Confirmation du mot de passe",
   "Payment details": "Modalités de règlement",
+  "Payment info": "Coordonnées bancaires",
   "Personal info": "Information personelle",
   "Please enter a valid email address and password." : "Veuillez entrer une adresse email et un mot de passe.",
   "Portfolio management":"Gestion financière",
@@ -100,6 +108,7 @@
   "Widowed": "Veuf(ve)",
   "Without any professional activity": "Sans activité professionnelle",
   "Worker": "Ouvrier",
+  "You missed 1 field. It has been highlighted": "Il reste 1 champ en erreur, comme indiqué ci dessous.",
 
   "Blog": "Blog",
   "Contact us": "Contactez nous",
