completed User edit + bank accounts

--- a/config/locales/fr.json
+++ b/config/locales/fr.json
@@ -53,6 +53,7 @@
   "Issuance city": "Délivré à",
   "Issuance date": "Délivré le",
   "Issuance country": "Pays",
+  "Label": "Libellé",
   "Language": "Langue",
   "lastname": "nom",
   "Lastname": "Nom",
